--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <script>
         fetch("https://ci-swapi.herokuapp.com/api/")
             .then(response => response.json())
-            .then(data => {
-                document.getElementById("content").innerHTML = data.people;
-            })
+            .then(data => displayData(data))
+            .catch((e) => {
+                console.error("Error: ", e);
+            });
+
+        function displayData(data) {
+            document.getElementById("content").innerHTML = data.people;
+        }
     </script>
 </body>
 
